--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "fomantic-ui": "^2.8.6",
+    "fomantic-ui-css": "^2.8.6",
     "gulp": "^4.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^1.2.1",
     "styled-components": "^5.1.1"
   },
   "scripts": {
