--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fomantic-ui": "^2.8.6",
     "fomantic-ui-css": "^2.8.6",
     "gulp": "^4.0.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
